# localization_zoo

./: .dockerignore  .gitignore  CITATION.cff  CMakeLists.txt  CODEX_TASK.md  CODEX_TASK_2_method_expansion.md  CODEX_TASK_3_test_verification.md  CODEX_TASK_4_hard_pcl_localization.md  CONTRIBUTING.md  Dockerfile  Doxyfile  PLAN.md  README.md  requirements-lock.txt
common/: CMakeLists.txt
common/include/common/: ceres_compat.h  felzenszwalb_edt.h  io.h  math_utils.h  types.h
common/src/: felzenszwalb_edt.cpp  io.cpp  math_utils.cpp
common/test/: test_felzenszwalb_edt.cpp  test_io.cpp  test_math_utils.cpp  test_thresholds.h
evaluation/: CMakeLists.txt  README.md
evaluation/config/: bievr_hard_pcl_indoor.yaml  bievr_hard_pcl_params.yaml  lidar_degeneracy_triage_policy.json
evaluation/data/: paper_reported_numbers.json
evaluation/fixtures/: mcd_kth_smoke_gt.csv
evaluation/fixtures/fr079_train_1200/: gt.csv  scan_meta.json
evaluation/fixtures/fr079_train_200/: gt.csv
evaluation/fixtures/fr079_val_384/: gt.csv  scan_meta.json
evaluation/fixtures/intel_train_150/: gt.csv  scan_meta.json
evaluation/fixtures/intel_val_73/: gt.csv  scan_meta.json
evaluation/fixtures/mcd_kth_smoke/: frame_timestamps.csv  landmarks.csv  visual_observations.csv
evaluation/fixtures/mit_train_120/: gt.csv  scan_meta.json
evaluation/fixtures/mit_val_33/: gt.csv  scan_meta.json
evaluation/fixtures/rf2o_corridor/: gt.csv
evaluation/fixtures/rf2o_smoke/: gt.csv  scan_meta.json
evaluation/scripts/: KEYFRAME_CORRECTION_COMPONENT.md  SETUP_2D_SCAN_BENCHMARK.md  SETUP_HARD_PCL_LOCALIZATION_BENCHMARK.md  SETUP_LIDAR_DEGENERACY_BENCHMARK.md  SETUP_MULRAN_BENCHMARK.md  SETUP_MULTIMODAL_BENCHMARK.md  SETUP_NCLT_BENCHMARK.md  SETUP_NEWER_COLLEGE_BENCHMARK.md  SETUP_PUBLIC_BENCHMARK_WINDOWS.md  VERIFY_KITTI_IMU_DLIO.md  analyze_lidar_degeneracy_sequence.py  analyze_pair_prior_tail_failures.py  animate_trajectory.py  apply_keyframe_corrections_to_prior.py  benchmark.py  build_ct_icp_guarded_composite.py  build_fixed_map_ndt_publish_guard.py  build_hard_pcl_method_health_comparison.py  build_lidar_degeneracy_full_trajectory_method_health.py  build_paper_ready_bundle.py  calibrate_fixed_map_global_hypothesis_verifier.py  calibrate_lidar_degeneracy_risk.py  calibrate_pair_prior_quality.py  compare_ct_icp_fallback_sources.py  cube_lio_cubemap_demo.py  demo_localization_zoo.sh  diagnose_pair_prior_selector.py  docker_demo_entrypoint.sh  download_hard_pcl_localization.sh  download_kitti_raw_color_window.py  evaluate_bievr_tum_gt.py  evaluate_pair_prior_residuals.py  evaluate_window_odometry_gt.py  expand_manifests.py  export_benchmark_site.py  export_paper_assets.py  extract_ouster_packet_lidar_imu.py  extract_ros1_lidar.py  extract_ros1_lidar_imu.py  extract_ros2_lidar_imu.py  (+100 more)
evaluation/src/: ct_icp_window_odometry.cpp  dataset_loader.h  degen_sense_window_odometry.cpp  kiss_keyframe_odometry.cpp  kiss_pair_odometry.cpp  kitti_eval.cpp  litamin2_window_odometry.cpp  multimodal_dogfooding.cpp  pcd_dogfooding.cpp  relead_window_odometry.cpp  scan_dogfooding.cpp  small_gicp_pair_odometry.cpp  synthetic_benchmark.cpp  xicp_window_odometry.cpp
papers/ad_vlo/: CMakeLists.txt  README.md
papers/ad_vlo/src/: ad_vlo.cpp
papers/ad_vlo/test/: test_ad_vlo.cpp
papers/adaptive_icp/: CMakeLists.txt  README.md
papers/adaptive_icp/src/: adaptive_icp.cpp
papers/adaptive_icp/test/: test_adaptive_icp.cpp
papers/aloam/: CMakeLists.txt  README.md
papers/aloam/src/: laser_mapping.cpp  laser_odometry.cpp  scan_registration.cpp
papers/aloam/test/: test_aloam.cpp
papers/balm2/: CMakeLists.txt  README.md
papers/balm2/src/: balm2.cpp
papers/balm2/test/: test_balm2.cpp
papers/bievr_lio/: CMakeLists.txt  README.md
papers/bievr_lio/src/: bievr_lio.cpp
papers/bievr_lio/test/: test_bievr_lio.cpp
papers/clins/: CMakeLists.txt  README.md
papers/clins/src/: clins.cpp
papers/clins/test/: test_clins.cpp
papers/csm/: CMakeLists.txt  README.md
papers/csm/src/: csm.cpp
papers/csm/test/: test_csm.cpp
papers/ct_icp/: CMakeLists.txt  README.md
papers/ct_icp/src/: ct_icp_registration.cpp
papers/ct_icp/test/: test_ct_icp.cpp
papers/ct_icp_relead/: CMakeLists.txt  README.md
papers/ct_icp_relead/src/: degeneracy_aware_ct_icp.cpp
papers/ct_icp_relead/test/: test_ct_icp_relead.cpp
papers/ct_lio/: CMakeLists.txt  README.md
papers/ct_lio/src/: ct_lio_registration.cpp
papers/ct_lio/test/: test_ct_lio.cpp
papers/ct_voxelmap/: CMakeLists.txt  README.md
papers/ct_voxelmap/src/: ct_voxelmap.cpp
papers/ct_voxelmap/test/: test_ct_voxelmap.cpp
papers/cube_lio_repro/: CMakeLists.txt  README.md
papers/cube_lio_repro/src/: cube_lio.cpp
papers/cube_lio_repro/test/: test_cube_lio.cpp
papers/d2lio/: CMakeLists.txt  README.md
papers/d2lio/src/: d2lio.cpp
papers/d2lio/test/: test_d2lio.cpp
papers/dali_slam/: CMakeLists.txt  README.md
papers/dali_slam/src/: dali_slam.cpp
papers/dali_slam/test/: test_dali_slam.cpp
papers/damm_loam/: CMakeLists.txt  README.md
papers/damm_loam/src/: damm_loam.cpp
papers/damm_loam/test/: test_damm_loam.cpp
papers/degen_sense/: CMakeLists.txt  README.md
papers/degen_sense/src/: degen_sense.cpp
papers/degen_sense/test/: test_degen_sense.cpp
papers/dilo/: CMakeLists.txt  README.md
papers/dilo/src/: dilo.cpp
papers/dilo/test/: test_dilo.cpp
papers/dlio/: CMakeLists.txt  README.md
papers/dlio/src/: dlio.cpp
papers/dlio/test/: test_dlio.cpp
papers/dlo/: CMakeLists.txt  README.md
papers/dlo/src/: dlo.cpp
papers/dlo/test/: test_dlo.cpp
papers/fast_lio2/: CMakeLists.txt  README.md
papers/fast_lio2/src/: fast_lio2.cpp
papers/fast_lio2/test/: test_fast_lio2.cpp
papers/fast_lio_slam/: CMakeLists.txt  README.md
papers/fast_livo2/: CMakeLists.txt  README.md
papers/floam/: CMakeLists.txt  README.md
papers/fr_lio/: CMakeLists.txt  README.md
papers/genz_icp/: CMakeLists.txt  README.md
papers/gicp/: CMakeLists.txt  README.md
python/: CMakeLists.txt  README.md  example_synthetic.py
python/src/: localization_zoo_py.cpp
(+6418 files in other folders)
