cmake_minimum_required(VERSION 3.16)
project(localization_zoo LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(Eigen3 REQUIRED)
find_package(PCL REQUIRED COMPONENTS common io filters registration)
find_package(GTest REQUIRED)
find_package(glog CONFIG QUIET)
enable_testing()

add_subdirectory(common)
add_subdirectory(papers/litamin2)
add_subdirectory(papers/aloam)
add_subdirectory(papers/floam)
add_subdirectory(papers/isc_loam)
add_subdirectory(papers/ct_icp)
add_subdirectory(papers/relead)
add_subdirectory(papers/xicp)
add_subdirectory(papers/ct_icp_relead)
add_subdirectory(papers/imu_preintegration)
add_subdirectory(papers/kiss_icp)
add_subdirectory(papers/genz_icp)
add_subdirectory(papers/adaptive_icp)
add_subdirectory(papers/d2lio)
add_subdirectory(papers/ct_voxelmap)
add_subdirectory(papers/r_voxelmap)
add_subdirectory(papers/degen_sense)
add_subdirectory(papers/vibration_lio)
add_subdirectory(papers/bievr_lio)
add_subdirectory(papers/ua_lio)
add_subdirectory(papers/dtd)
add_subdirectory(papers/damm_loam)
add_subdirectory(papers/lodestar)
add_subdirectory(papers/terrain_rbf_lio)
add_subdirectory(papers/lidar_iba)
add_subdirectory(papers/dali_slam)
add_subdirectory(papers/intensity_flow)
add_subdirectory(papers/svn_icp)
add_subdirectory(papers/pcr_dat)
add_subdirectory(papers/small_mighty)
add_subdirectory(papers/m_gclo)
add_subdirectory(papers/quadric_lo)
add_subdirectory(papers/dilo)
add_subdirectory(papers/nhc_lio)
add_subdirectory(papers/student_t_lo)
add_subdirectory(papers/spectral_lo)
add_subdirectory(papers/gmm_lo)
add_subdirectory(papers/gnc_lo)
add_subdirectory(papers/mcc_lo)
add_subdirectory(papers/imls_slam)
add_subdirectory(papers/tricp_lo)
add_subdirectory(papers/kc_lo)
add_subdirectory(papers/i_loam)
add_subdirectory(papers/pl_loam)
add_subdirectory(papers/inten_loam)
add_subdirectory(papers/cube_lio_repro)
add_subdirectory(papers/rko_lio)
add_subdirectory(papers/ndt)
add_subdirectory(papers/gicp)
add_subdirectory(papers/voxel_gicp)
add_subdirectory(papers/small_gicp)
add_subdirectory(papers/vgicp_slam)
add_subdirectory(papers/loam_livox)
add_subdirectory(papers/lego_loam)
add_subdirectory(papers/mulls)
add_subdirectory(papers/balm2)
add_subdirectory(papers/suma)
add_subdirectory(papers/dlo)
add_subdirectory(papers/hdl_graph_slam)
add_subdirectory(papers/dlio)
add_subdirectory(papers/lins)
add_subdirectory(papers/point_lio)
add_subdirectory(papers/clins)
add_subdirectory(papers/vilens)
add_subdirectory(papers/ct_lio)
add_subdirectory(papers/scan_context)
add_subdirectory(papers/lio_sam)
add_subdirectory(papers/lvi_sam)
add_subdirectory(papers/vins_fusion)
add_subdirectory(papers/okvis)
add_subdirectory(papers/orb_slam3)
add_subdirectory(papers/fast_lio2)
add_subdirectory(papers/fast_livo2)
add_subdirectory(papers/r2live)
add_subdirectory(papers/fast_lio_slam)
add_subdirectory(evaluation)
